--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "admin-lte": "^3.1.0",
         "cross-env": "^7.0.3"
     }
 }
