--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "admin-lte": "^3.1.0",
-        "cross-env": "^7.0.3"
+        "cross-env": "^7.0.3",
+        "sweetalert2": "^10.15.7",
+        "vue-progressbar": "^0.7.5"
     }
 }
