--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "admin-lte": "^3.1.0",
         "cross-env": "^7.0.3",
         "sweetalert2": "^10.15.7",
-        "vue-progressbar": "^0.7.5"
+        "vue-progressbar": "^0.7.5",
+        "vue-router": "^3.5.1"
     }
 }
