--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "admin-lte": "^3.1.0",
         "cross-env": "^7.0.3",
+        "laravel-vue-pagination": "^2.3.1",
         "sweetalert2": "^10.15.7",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.5.1"
