--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "laravel-vue-pagination": "^2.3.1",
         "sweetalert2": "^10.15.7",
         "vue-progressbar": "^0.7.5",
-        "vue-router": "^3.5.1"
+        "vue-router": "^3.5.1",
+        "vuex": "^3.6.2"
     }
 }
